# gedcom-to-JSON

./: .gitignore  GedComFormat  GedComSample-2.ged  GedComSample-3.ged  GedComSample.ged  README.md  gedcomdates.py  gedcomevents.py  gedcominfo.py  gedcompairbonds.py  gedcomparent.py  gedcomparse.py  gedtests.py  index.html  install.sh  parsedate.py  pyproject.toml  server.js  smallJSON.json  tox.ini
docs/: index.rst  working-with-gedcom-files.rst
gedcom/: __init__.py  exceptions.py  family.py  file.py  individual.py
gedcompy/: tests.py
gedcompy/docs/: conf.py
gedcompy/gedcom/: __init__.py
gedcompy/gedcompy.egg-info/: PKG-INFO
samples/: GedComSample-1.ged  GedComSample-2.ged  GedComSample-3.ged  GedComSample-4.ged  GedComSample-5.ged  GedComSample-small.ged  ModSample.ged
schemas/: pairbond-relationship.model.js  parental-relationship.model.js  person.model.js
tests/: test_gedcom.py
tests/unit/: test_file.py
