[tool.poetry]
name = "gedcom-to-json"
version = "0.2.9"
description = "Parse and create GEDCOM (genealogy) files"
license='GPLv3+'
authors = ["Rory McCann <rory@technomancy.org>"]
packages = ["gedcom"]
classifiers=[
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Intended Audience :: Developers',
    'Development Status :: 4 - Beta',
    'Topic :: Sociology :: Genealogy',
    'Topic :: Sociology :: History',
    'Topic :: Text Processing',
]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-icdiff = "^0.5"
pytest-cov = "^3.0.0"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
